# uggo-detecter

./: Cargo.toml  README.md  build_project.bat
.github/workflows/: build-dev.yml  nightly.yml  test-verify.yml
crates/config/: CHANGELOG.md  Cargo.toml
crates/lol-client/: CHANGELOG.md  Cargo.toml
crates/lol-client/src/: lib.rs
crates/ugg-api/: CHANGELOG.md  Cargo.toml
crates/ugg-api/src/: lib.rs
crates/ugg-types/: CHANGELOG.md  Cargo.toml
crates/ugg-types/src/: client_champ_select.rs  lib.rs
crates/uggo/: CHANGELOG.md  Cargo.toml
crates/uggo/src/: context.rs  main.rs  util.rs
crates/uggo/src/components/: rune_path.rs
