[workspace]
resolver = "2"
members = [
    "crates/uggo",
    "crates/ugg-types",
    "crates/ugg-api",
    "crates/config",
    "crates/lol-client"
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"

# Tối ưu hóa file binary
[profile.release]
opt-level = 3           # Tối ưu mã tối đa
lto = true              # Link Time Optimization (giảm dung lượng, tăng tốc)
codegen-units = 1       # Giảm đơn vị sinh mã để tối ưu tốt hơn (build lâu hơn chút)
panic = "abort"         # Giảm dung lượng bằng cách bỏ unwind stack khi crash
strip = true            # Loại bỏ debug symbols

[profile.release-small]
inherits = "release"
opt-level = "z"
