[workspace]
resolver = "2"
members = [
    "crates/uggo",
    "crates/ugg-types",
    "crates/ugg-api",
    "crates/config",
    "crates/lol-client"
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"

# --- TỐI ƯU HÓA MỚI ---
[profile.release]
opt-level = 3           # Tối ưu hóa mã nguồn mức cao nhất
lto = true              # Link Time Optimization: Giảm dung lượng file, tăng tốc độ
codegen-units = 1       # Giúp trình biên dịch tối ưu tốt hơn (dù build lâu hơn xíu)
panic = "abort"         # Giảm dung lượng bằng cách bỏ qua unwind stack khi crash
strip = true            # Loại bỏ thông tin debug không cần thiết
